--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
   left: 0;
   height: 3px;
   width: 0%;
-  background: #34efdf;
+  background: #808080;
   border-radius: 12px;
   transition: all 0.4s ease;
 }
